# qscreenshot

./: Authorization.md  ProjectHome.md  new_downloads.md
qScreenshot/: CMakeLists.txt  Changelog.txt  Info.plist  README  conf.pri  qscreenshot.desktop  qscreenshot.pro  qscreenshot.qc
qScreenshot/qxt/: qxt.pro
qScreenshot/qxt/src/: src.pri
qScreenshot/qxt/src/core/: qxtglobal.h
qScreenshot/qxt/src/gui/: qxtglobalshortcut.cpp  qxtglobalshortcut.h  qxtglobalshortcut_mac.cpp  qxtglobalshortcut_p.h  qxtglobalshortcut_win.cpp  qxtglobalshortcut_x11.cpp  qxtwindowsystem.h  qxtwindowsystem_mac.cpp  qxtwindowsystem_x11.cpp
qScreenshot/src/: aboutdlg.cpp  aboutdlg.h  aboutdlg.ui  common.cpp  common.h  controller.cpp  controller.h  defines.h  editserverdlg.cpp  editserverdlg.h  grabareawidget.cpp  grabareawidget.h  historydlg.cpp  historydlg.h  iconset.cpp  iconset.h  main.cpp  options.cpp  options.h  optionsdlg.cpp  optionsdlg.h  optionsdlg.ui  optionswidget.cpp  optionswidget.h  optionswidget.ui  pixmapwidget.cpp  pixmapwidget.h  proxysettingsdlg.cpp  proxysettingsdlg.h  screenshot.cpp  screenshot.h  screenshot.qrc  screenshot.rc  screenshot.ui  screenshoter.cpp  screenshoter.h  screenshotmainwin.cpp  screenshotmainwin.h  screenshotoptions.cpp  screenshotoptions.h  (+14 more)
qScreenshot/src/icons/logo/: screenshot.icns
qScreenshot/src/lang/: qscreenshot_ru.ts  qscreenshot_zh_TW.ts  ru.qm  ru.ts
scripts/: build_deb.sh
scripts/posix/: PKGBUILD  build_deb.sh  build_suse_rpm.sh  package.sh  qscreenshot-9999.ebuild
scripts/posix/debian/: changelog  control  copyright  dirs  rules
scripts/posix/rpm/: README  Rpmsetup.sh  build_qScreenshot_rpm.sh
scripts/win/: make-qscreenshot-and-upload-to-googlecode.cmd  qscreenshot-install.nsi  upload-installer-to-googlecode.cmd
scripts/win32/: make-qscreenshot-and-upload-to-googlecode.cmd  make-qscreenshot.cmd  qscreenshot-install.nsi
